# serializer version: 1
# name: test_platform_setup_and_discovery[event.bathroom_smart_switch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'click',
        'press',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bathroom_smart_switch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'numbered_button',
    'unique_id': 'tuya.fvywp3b5mu4zay8lgkxwswitch_mode1',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[event.bathroom_smart_switch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': 'click',
      'event_types': list([
        'click',
        'press',
      ]),
      'friendly_name': 'Bathroom Smart Switch None',
    }),
    'context': <ANY>,
    'entity_id': 'event.bathroom_smart_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-01T12:14:15.000+00:00',
  })
# ---
# name: test_platform_setup_and_discovery[event.bathroom_smart_switch_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'click',
        'press',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bathroom_smart_switch_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'numbered_button',
    'unique_id': 'tuya.fvywp3b5mu4zay8lgkxwswitch_mode2',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[event.bathroom_smart_switch_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': 'click',
      'event_types': list([
        'click',
        'press',
      ]),
      'friendly_name': 'Bathroom Smart Switch None',
    }),
    'context': <ANY>,
    'entity_id': 'event.bathroom_smart_switch_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-01T12:14:15.000+00:00',
  })
# ---
# name: test_platform_setup_and_discovery[event.bouton_tempo_exterieur-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'click',
        'double_click',
        'press',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.bouton_tempo_exterieur',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'numbered_button',
    'unique_id': 'tuya.g5uso5ajgkxwswitch_mode1',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[event.bouton_tempo_exterieur-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': 'press',
      'event_types': list([
        'click',
        'double_click',
        'press',
      ]),
      'friendly_name': 'Bouton tempo extérieur None',
    }),
    'context': <ANY>,
    'entity_id': 'event.bouton_tempo_exterieur',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-01T12:14:15.000+00:00',
  })
# ---
# name: test_platform_setup_and_discovery[event.burocam-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'triggered',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.burocam',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.DOORBELL: 'doorbell'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell_message',
    'unique_id': 'tuya.svjjuwykgijjedurpsalarm_message',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[event.burocam-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'doorbell',
      'event_type': 'triggered',
      'event_types': list([
        'triggered',
      ]),
      'friendly_name': 'Bürocam None',
      'message': '',
    }),
    'context': <ANY>,
    'entity_id': 'event.burocam',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-01T12:14:15.000+00:00',
  })
# ---
# name: test_platform_setup_and_discovery[event.c9-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'triggered',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.c9',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.DOORBELL: 'doorbell'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell_message',
    'unique_id': 'tuya.fjdyw5ld2f5f5ddspsalarm_message',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[event.c9-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'doorbell',
      'event_type': 'triggered',
      'event_types': list([
        'triggered',
      ]),
      'friendly_name': 'C9 None',
      'message': '',
    }),
    'context': <ANY>,
    'entity_id': 'event.c9',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-01T12:14:15.000+00:00',
  })
# ---
# name: test_platform_setup_and_discovery[event.c9_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'triggered',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.c9_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.DOORBELL: 'doorbell'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell_picture',
    'unique_id': 'tuya.fjdyw5ld2f5f5ddspsdoorbell_pic',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[event.c9_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'doorbell',
      'event_type': 'triggered',
      'event_types': list([
        'triggered',
      ]),
      'friendly_name': 'C9 None',
      'message': '',
    }),
    'context': <ANY>,
    'entity_id': 'event.c9_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-01T12:14:15.000+00:00',
  })
# ---
# name: test_platform_setup_and_discovery[event.garage_camera-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'triggered',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.garage_camera',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.DOORBELL: 'doorbell'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell_message',
    'unique_id': 'tuya.53fnjncm3jywuaznpsalarm_message',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[event.garage_camera-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'doorbell',
      'event_type': 'triggered',
      'event_types': list([
        'triggered',
      ]),
      'friendly_name': 'Garage Camera None',
      'message': '',
    }),
    'context': <ANY>,
    'entity_id': 'event.garage_camera',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-01T12:14:15.000+00:00',
  })
# ---
# name: test_platform_setup_and_discovery[event.intercom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'triggered',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.intercom',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.DOORBELL: 'doorbell'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell_message',
    'unique_id': 'tuya.qt0o5jlatiqf2rscpsalarm_message',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[event.intercom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'doorbell',
      'event_type': 'triggered',
      'event_types': list([
        'triggered',
      ]),
      'friendly_name': 'Intercom None',
      'message': '',
    }),
    'context': <ANY>,
    'entity_id': 'event.intercom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-01T12:14:15.000+00:00',
  })
# ---
# name: test_platform_setup_and_discovery[event.intercom_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'triggered',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.intercom_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.DOORBELL: 'doorbell'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell_picture',
    'unique_id': 'tuya.qt0o5jlatiqf2rscpsdoorbell_pic',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[event.intercom_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'doorbell',
      'event_type': 'triggered',
      'event_types': list([
        'triggered',
      ]),
      'friendly_name': 'Intercom None',
      'message': '',
    }),
    'context': <ANY>,
    'entity_id': 'event.intercom_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-01T12:14:15.000+00:00',
  })
# ---
# name: test_platform_setup_and_discovery[event.mirilla_puerta-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'triggered',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mirilla_puerta',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.DOORBELL: 'doorbell'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell_message',
    'unique_id': 'tuya.i6xywcsymer1kmb6psalarm_message',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[event.mirilla_puerta-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'doorbell',
      'event_type': 'triggered',
      'event_types': list([
        'triggered',
      ]),
      'friendly_name': 'Mirilla puerta None',
      'message': '',
    }),
    'context': <ANY>,
    'entity_id': 'event.mirilla_puerta',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-01T12:14:15.000+00:00',
  })
# ---
# name: test_platform_setup_and_discovery[event.mirilla_puerta_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'triggered',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mirilla_puerta_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.DOORBELL: 'doorbell'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'doorbell_picture',
    'unique_id': 'tuya.i6xywcsymer1kmb6psdoorbell_pic',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[event.mirilla_puerta_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'doorbell',
      'event_type': 'triggered',
      'event_types': list([
        'triggered',
      ]),
      'friendly_name': 'Mirilla puerta None',
      'message': '',
    }),
    'context': <ANY>,
    'entity_id': 'event.mirilla_puerta_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-11-01T12:14:15.000+00:00',
  })
# ---
